--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.7.1",
+    "@react-navigation/stack": "^5.7.1",
     "expo": "~38.0.1",
     "expo-splash-screen": "~0.4.0",
     "expo-status-bar": "^1.0.0",
@@ -15,11 +18,15 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "~0.62.2",
-    "react-native-gesture-handler": "~1.6.1",
-    "react-native-reanimated": "~1.9.0",
-    "react-native-screens": "~2.9.0",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-gifted-chat": "^0.16.3",
+    "react-native-reanimated": "^1.9.0",
+    "react-native-safe-area-context": "^3.1.1",
+    "react-native-screens": "^2.9.0",
     "react-native-unimodules": "~0.10.1",
-    "react-native-web": "~0.11.7"
+    "react-native-vector-icons": "^7.0.0",
+    "react-native-web": "~0.11.7",
+    "react-native-webview": "^10.3.3"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
