Added redux to the app

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "ChatApp",
-  "displayName": "ChatApp",
+  "name": "Articles",
+  "displayName": "Articles",
   "expo": {
     "name": "ChatApp",
     "slug": "ChatApp",
